--- a/css/styles.css
+++ b/css/styles.css
@@ -327,6 +327,19 @@ body {
   margin-bottom: 1rem;
 }
 
+/* for mandatory field */
+.mandatory::after {
+  content: "* ";
+  color: red;
+  margin-left: 5px;
+}
+.mandatory-container {
+  font-size: 1rem;
+  color: #b4713a;
+  margin-bottom: 1rem;
+  position: flex;
+}
+
 @keyframes dots {
   0% {
     content: ".";
